--- a/src/style/Herois/herois.module.css
+++ b/src/style/Herois/herois.module.css
@@ -1,11 +1,59 @@
+
+
 .herois {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    padding: 0;
-    width: 100%;
-    max-width: 1200px;
-    list-style: none;
+  background: url(../../assets/bg-personagens.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* margin: 3rem 3rem; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  font-family: var(--space-mono);
+  font-weight: 400;
+}
+.verde {
+  color: #329d6f;
+}
+
+.roxo {
+  color: var(--roxo);
+}
+
+.up {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  font-size: 1rem;
+  margin: 0.75rem 0rem;
+}
+
+.down {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  height: 100vh;
+}
+
+.grid {
+  overflow-y: scroll;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  height: 80%;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+}
+
+.grid::-webkit-scrollbar {
+  width: 6px;
+}
+
+.grid::-webkit-scrollbar-thumb {
+  background-color: transparent;
 }
