--- a/src/style/Herois/herois.module.css
+++ b/src/style/Herois/herois.module.css
@@ -1,17 +1,22 @@
-
+.container {
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+  /* margin: 15rem 0; */
+}
 
 .herois {
   background: url(../../assets/bg-personagens.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  /* margin: 3rem 3rem; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+  /* justify-content: space-between; */
   font-family: var(--space-mono);
   font-weight: 400;
+  width: 100%;
+  /* height: 100vh; */
 }
 .verde {
   color: #329d6f;
@@ -21,31 +26,13 @@
   color: var(--roxo);
 }
 
-.up {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  width: 100%;
-  font-size: 1rem;
-  margin: 0.75rem 0rem;
-}
 
-.down {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  width: 80%;
-  height: 100vh;
-}
 
 .grid {
   overflow-y: scroll;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  height: 80%;
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
 }
@@ -56,4 +43,10 @@
 
 .grid::-webkit-scrollbar-thumb {
   background-color: transparent;
+}
+
+.titulo {
+  color: #fff;
+  margin: 1rem;
+  text-align: center;
 }
