--- a/src/style/Herois/herois.module.css
+++ b/src/style/Herois/herois.module.css
@@ -4,7 +4,6 @@
   width: 100%;
   justify-content: space-evenly;
   align-items: center;
-  /* margin: 15rem 0; */
 }
 
 .herois {
@@ -12,11 +11,9 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  /* justify-content: space-between; */
   font-family: var(--space-mono);
   font-weight: 400;
   width: 100%;
-  /* height: 100vh; */
 }
 .verde {
   color: #329d6f;
@@ -49,4 +46,69 @@
   color: #fff;
   margin: 1rem;
   text-align: center;
+}
+
+.navigationButtons {
+  display: none;
+  width: 100%;
+}
+
+.btn {
+  background-color: transparent;
+  color: #fff;
+  border: none;
+  padding: 1rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.btn img {
+  width: auto;
+  height: 20px;
+  background: #fff;
+  background-color: rgba(0, 0, 0, 0);
+
+}
+
+.img {
+  width: 20px;
+  height: 20px;
+  background: transparent;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+
+@media screen and (max-width: 768px) {
+  .grid {
+    display: none;
+  }
+
+  .container {
+    height: 100vh;
+  }
+
+
+  .herois {
+    position: relative;
+  }
+
+  .btn {
+    background: #fff;
+    border-radius: 50%;
+  }
+
+  .navigationButtons {
+    display: block;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 50%;
+    left: 0;
+  }
+
+  .titulo {
+    margin: 0;
+  }
+
 }
