--- a/src/style/Missao/missao.module.css
+++ b/src/style/Missao/missao.module.css
@@ -14,6 +14,10 @@
 
 }
 
+.titulo {
+    font-weight: lighter;
+}
+
 .content {
     display: flex;
     flex-direction: row;
@@ -29,4 +33,10 @@
     height: 80%;
     scrollbar-width: thin;
     scrollbar-color: transparent transparent;
+}
+
+@media screen and (max-width: 768px) {
+    .grid {
+        grid-template-columns: 1fr;
+    }
 }
